@@ -1,3 +1,8 @@
+2009-03-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/9945
+	* objcopy.c (copy_object): Clear HAS_RELOC when stripping all.
+
 2009-03-11  Chris Demetriou  <cgd@google.com>
 
 	* ar.c (deterministic): New global variable.
