@@ -1,3 +1,10 @@
+2009-03-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/9945
+	* elf.c (assign_section_numbers): Generate symbol table if there
+	is any relocation in output.
+	(_bfd_elf_compute_section_file_positions): Likewise.
+
 2009-03-13  Nick Clifton  <nickc@redhat.com>
 
 	PR 9934
